--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,6 +37,7 @@ xfce4_appfinder_CFLAGS = \
 	$(GARCON_CFLAGS) \
 	$(GIO_CFLAGS) \
 	$(XFCONF_CFLAGS) \
+	$(EXECHELPER_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
 xfce4_appfinder_LDADD = \
@@ -47,6 +48,7 @@ xfce4_appfinder_LDADD = \
 	$(LIBXFCE4UI_LIBS) \
 	$(GARCON_LIBS) \
 	$(XFCONF_LIBS) \
+	$(EXECHELPER_LIBS) \
 	$(GIO_LIBS)
 
 xfce4_appfinder_LDFLAGS = \
