--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,6 +34,7 @@ xfce4_appfinder_CFLAGS = \
 	$(GTK_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCE4UI_CFLAGS) \
+	$(LIBWNCK_CFLAGS) \
 	$(GARCON_CFLAGS) \
 	$(GIO_CFLAGS) \
 	$(XFCONF_CFLAGS) \
@@ -46,6 +47,7 @@ xfce4_appfinder_LDADD = \
 	$(GTK_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
 	$(LIBXFCE4UI_LIBS) \
+	$(LIBWNCK_LIBS) \
 	$(GARCON_LIBS) \
 	$(XFCONF_LIBS) \
 	$(EXECHELPER_LIBS) \
